--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -9,8 +9,7 @@
 		"ghcr.io/devcontainers/features/docker-outside-of-docker:1": {}
 	},
 	"runArgs": ["--add-host=host.docker.internal:host-gateway"],
-	"postCreateCommand": "sudo apt-get update && sudo apt-get install -y iputils-ping"
-
+	"postCreateCommand": "sudo apt-get update && sudo apt-get install -y iputils-ping && pip install streamlit",
 	// Features to add to the dev container. More info: https://containers.dev/features.
 	// "features": {},
 
