--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,5 +13,6 @@ dependencies = [
     "pandas>=2.3.2",
     "psycopg2-binary>=2.9.10",
     "pydantic>=2.11.7",
+    "sqlvalidator>=0.0.20",
     "streamlit>=1.49.1",
 ]
