--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,8 +11,11 @@ dependencies = [
     "langchain-community>=0.3.29",
     "openai>=1.107.1",
     "pandas>=2.3.2",
+    "pgvector>=0.4.1",
     "psycopg2-binary>=2.9.10",
     "pydantic>=2.11.7",
+    "ragas>=0.3.5",
+    "rapidfuzz>=3.14.1",
     "sqlvalidator>=0.0.20",
     "streamlit>=1.49.1",
 ]
